bug fix - apply max width to entire body element to stop stretching on xl screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,4 +158,7 @@ mark {
     #photos {
         column-count: 4;
     }
+    body {
+        max-width: 1600px;
+    }
 } 
